WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244948
[macOS] <attachment> should not use a generic file icon for iWork files
https://bugs.webkit.org/show_bug.cgi?id=244948
Summary
[macOS] <attachment> should not use a generic file icon for iWork files
Devin Rousso
Reported
2022-09-08 14:42:46 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-08 16:05:26 PDT
<
rdar://problem/99719478
>
Devin Rousso
Comment 2
2022-09-08 17:07:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4145
EWS
Comment 3
2022-09-09 11:43:04 PDT
Committed
254315@main
(bbe48e2484b7): <
https://commits.webkit.org/254315@main
> Reviewed commits have been landed. Closing PR #4145 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug