[macOS] <attachment> should not use a generic file icon for iWork files https://bugs.webkit.org/show_bug.cgi?id=244948 <rdar://problem/99719478>

Reviewed by Tim Horton.

* Source/WebCore/rendering/RenderThemeMac.mm:
(WebCore::iconForAttachment):
Only use the given `attachmentType` if it's not `"public.data"`, as that's the fallback value. If it
is `"public.data"`, attempt to derive an icon from the filename and/or extension before using it.

Canonical link: https://commits.webkit.org/254315@main