Source/WebCore/rendering/RenderThemeMac.mm
@@ -2554,7 +2554,7 @@ int RenderThemeMac::attachmentBaseline(const RenderAttachment& attachment) const
 
 static RefPtr<Icon> iconForAttachment(const String& fileName, const String& attachmentType, const String& title)
 {
-    if (!attachmentType.isEmpty()) {
+    if (!attachmentType.isEmpty() && !equalLettersIgnoringASCIICase(attachmentType, "public.data"_s)) {
         if (equalLettersIgnoringASCIICase(attachmentType, "multipart/x-folder"_s) || equalLettersIgnoringASCIICase(attachmentType, "application/vnd.apple.folder"_s)) {
 ALLOW_DEPRECATED_DECLARATIONS_BEGIN
             auto type = kUTTypeFolder;
